spacing fixes

--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,7 @@
   background-color: #000000;
   color: white;
   font-family: 'AmaticSCBold';
+  margin-bottom: 15rem;
 
   display: flex;
   flex-direction: column;
